<resources>
    <string name="app_name">Whack a wole</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="records">Records</string>
    <string name="whack_a_wole">Whack a wole</string>
    <string name="menu">Menu</string>
    <string name="repeat">Repeat</string>
    <string name="your_name">Your name</string>
    <string name="enter_your_name_please">Enter your name please:</string>
    <string name="game_over">Game over!</string>
    <string name="your_result">Your result:</string>
    <string name="catch_me_if_you_can">Catch me if you can!</string>
    <string name="your_high_score">Your high score:</string>
    <string name="high_score">High score:</string>
    <string name="time">Time:</string>
</resources>