<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30A635"
    tools:context=".fragments.ResultFragment">

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="#8A442E"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/your_result"
        android:textSize="31sp" />

    <TextView
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/high_score"
        android:textSize="31sp" />

    <ImageView
        android:id="@+id/start_mole"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="200dp"
        android:src="@mipmap/romashka_launcher_foreground" />

    <Button
        android:id="@+id/button_repeat"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="500dp"
        android:text="@string/repeat"
        app:cornerRadius="60sp" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="570dp"
        android:text="@string/menu"
        app:cornerRadius="60sp" />
</RelativeLayout>